--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <table>
             <tr>
-                <td> <img width="200" src="images/passport photo.jpg" alt="Subhasis Majee's photo"></td>
+                <td> <img width="200" src="passport photo.jpg" alt="Subhasis Majee's photo"></td>
                 <td>
                     <h1>Subhasis Majee</h1>
                     <p><i>B.Tech student👨🏻‍💻 in Computer Science & Information Technology</i></p>
