--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <h2>Internships</h2>
         <article>
 
-            <h3>Flipkart, an e-commerce company</h3>
+            <h3>Internship1</h3>
             <p><i>SDE intern</i></p>
             <ul>
                 <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque velit iste mollitia debitis aliquam,
@@ -87,7 +87,7 @@
 
 
                 <li>
-                    <h3>Ethereum Voting</h3>
+                    <h3>E-commerce site clone</h3>
                     <ul>
                         <li>
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque accusamus inventore
@@ -107,7 +107,7 @@
             <article>
 
                 <li>
-                    <h3>Shuffler</h3>
+                    <h3>Resume website</h3>
                     <ul>
                         <li>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente minima perferendis
